// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly after data is added 1`] = `
.emotion-4 {
  width: calc(50% - 30px);
  margin-left: 15px;
  margin-right: 15px;
  display: inline-block;
}

.emotion-8 {
  display: block;
}

.emotion-2 {
  display: block;
  height: 35px;
  margin: 2px;
}

.emotion-9 {
  min-width: 1000px;
}

.emotion-5 {
  border-left: 1px solid black;
  display: inline-block;
  height: calc(100% - 100px);
  position: fixed;
  z-index: -1;
}

.emotion-0.breadcrumb {
  float: left;
  height: 35px;
  margin-bottom: 1px;
}

.emotion-3 {
  text-align: center;
  float: left;
  width: 100%;
}

<TwoListDisplay>
  <div
    className="emotion-9"
  >
    <div
      className="emotion-2"
    >
      <Breadcrumb
        bsClass="breadcrumb"
        className="emotion-0"
      >
        <ol
          aria-label="breadcrumbs"
          className="emotion-0 breadcrumb"
          role="navigation"
        >
          <BreadcrumbItem
            active={true}
            id="Home"
            key="0"
            onClick={[Function]}
          >
            <li
              className="active"
            >
              <span
                id="Home"
                onClick={[Function]}
              >
                Home
              </span>
            </li>
          </BreadcrumbItem>
        </ol>
      </Breadcrumb>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-4"
        id="left"
      >
        <div>
          <h2
            id="title"
          >
            Queues
          </h2>
        </div>
        <QueueList
          clickFunction={[Function]}
          currentlySelectedName="Home"
          headerStyle={
            Object {
              "height": "92px",
              "minHeight": "92px",
            }
          }
          id="QueueTable"
        >
          <DataTable
            colProps={
              Array [
                Object {
                  "dataField": "name",
                  "headerStyle": Object {
                    "height": "92px",
                    "minHeight": "92px",
                  },
                  "width": 23,
                },
                Object {
                  "dataField": "",
                  "formatter": [Function],
                  "headerStyle": Object {
                    "height": "92px",
                    "minHeight": "92px",
                  },
                  "text": "Active / Deadletter Message Counts",
                  "width": 46,
                },
                Object {
                  "dataField": "mostRecentDeadLetter",
                  "width": 23,
                },
                Object {
                  "dataField": "crud",
                  "formatter": [Function],
                  "headerStyle": Object {
                    "height": "92px",
                    "minHeight": "92px",
                  },
                  "text": " ",
                  "width": 8,
                },
              ]
            }
            defaultHover={true}
            name="QueueList"
            onRowClick={[Function]}
            searchable={true}
            selectRow={
              Object {
                "bgColor": "#99ccff",
                "selected": "Home",
              }
            }
            uniqueKeyColumn="name"
          >
            <FormGroup
              bsClass="form-group"
              controlId="searchBar"
            >
              <div
                className="form-group"
              >
                <FormControl
                  bsClass="form-control"
                  componentClass="input"
                  onChange={[Function]}
                  placeholder="Search"
                  type="input"
                  value=""
                >
                  <input
                    className="form-control"
                    id="searchBar"
                    onChange={[Function]}
                    placeholder="Search"
                    type="input"
                    value=""
                  />
                </FormControl>
              </div>
            </FormGroup>
            <p
              className="emotion-3"
            >
              No data has been retrieved yet.
            </p>
          </DataTable>
        </QueueList>
      </div>
      <div
        className="emotion-5"
      />
      <div
        className="emotion-4"
        id="right"
      >
        <div>
          <h2
            id="title"
          >
            Topics
          </h2>
        </div>
        <TopicList
          clickFunction={[Function]}
          headerStyle={
            Object {
              "height": "92px",
              "minHeight": "92px",
            }
          }
          id="TopicTable"
        >
          <DataTable
            colProps={
              Array [
                Object {
                  "dataField": "name",
                  "headerStyle": Object {
                    "height": "92px",
                    "minHeight": "92px",
                  },
                  "width": 31,
                },
                Object {
                  "align": "right",
                  "dataField": "subscriptionCount",
                  "headerStyle": Object {
                    "height": "92px",
                    "minHeight": "92px",
                  },
                  "width": 30,
                },
                Object {
                  "dataField": "topicStatus",
                  "text": "Status",
                  "width": 30,
                },
                Object {
                  "dataField": "",
                  "formatter": [Function],
                  "headerStyle": Object {
                    "height": "92px",
                    "minHeight": "92px",
                  },
                  "text": " ",
                  "width": 9,
                },
              ]
            }
            defaultHover={true}
            name="TopicList"
            onRowClick={[Function]}
            searchable={true}
            selectRow={
              Object {
                "bgColor": "#99ccff",
                "selected": undefined,
              }
            }
            uniqueKeyColumn="name"
          >
            <FormGroup
              bsClass="form-group"
              controlId="searchBar"
            >
              <div
                className="form-group"
              >
                <FormControl
                  bsClass="form-control"
                  componentClass="input"
                  onChange={[Function]}
                  placeholder="Search"
                  type="input"
                  value=""
                >
                  <input
                    className="form-control"
                    id="searchBar"
                    onChange={[Function]}
                    placeholder="Search"
                    type="input"
                    value=""
                  />
                </FormControl>
              </div>
            </FormGroup>
            <p
              className="emotion-3"
            >
              No data has been retrieved yet.
            </p>
          </DataTable>
        </TopicList>
      </div>
    </div>
  </div>
</TwoListDisplay>
`;

exports[`renders correctly before data is added 1`] = `
.emotion-3 {
  width: calc(50% - 30px);
  margin-left: 15px;
  margin-right: 15px;
  display: inline-block;
}

.emotion-7 {
  display: block;
}

.emotion-1 {
  display: block;
  height: 35px;
  margin: 2px;
}

.emotion-8 {
  min-width: 1000px;
}

.emotion-4 {
  border-left: 1px solid black;
  display: inline-block;
  height: calc(100% - 100px);
  position: fixed;
  z-index: -1;
}

.emotion-0.breadcrumb {
  float: left;
  height: 35px;
  margin-bottom: 1px;
}

.emotion-2 {
  text-align: center;
  float: left;
  width: 100%;
}

<div
  className="emotion-8"
>
  <div
    className="emotion-1"
  >
    <ol
      aria-label="breadcrumbs"
      className="emotion-0 breadcrumb"
      role="navigation"
    >
      <li
        className="active"
      >
        <span
          id="Home"
          onClick={[Function]}
        >
          Home
        </span>
      </li>
    </ol>
  </div>
  <div
    className="emotion-7"
  >
    <div
      className="emotion-3"
      id="left"
    >
      <div>
        <h2
          id="title"
        >
          Queues
        </h2>
      </div>
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="searchBar"
          onChange={[Function]}
          placeholder="Search"
          type="input"
          value=""
        />
      </div>
      <p
        className="emotion-2"
      >
        No data has been retrieved yet.
      </p>
    </div>
    <div
      className="emotion-4"
    />
    <div
      className="emotion-3"
      id="right"
    >
      <div>
        <h2
          id="title"
        >
          Topics
        </h2>
      </div>
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="searchBar"
          onChange={[Function]}
          placeholder="Search"
          type="input"
          value=""
        />
      </div>
      <p
        className="emotion-2"
      >
        No data has been retrieved yet.
      </p>
    </div>
  </div>
</div>
`;
